@@ -3,7 +3,8 @@ This this the changelog file for the Pothos GUI toolkit.
 Release 0.5.1 (pending)
 ==========================
 
-- Fix DTypeChooser config parsing for dimension option
+- Layout tweaks for dimension spinbox on DTypeChooser
+- Fix DTypeChooser config parsing for keyword options
 - Graph editor update activate topology button on toggle
 - Fix graph properties panel config options for older Qt
 
